[gd_scene load_steps=15 format=3 uid="uid://dfojy52nenh80"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_j0eea"]
[ext_resource type="Texture2D" uid="uid://brqjrngxw7nbk" path="res://assets/main-menu-02.png" id="2_40rq5"]
[ext_resource type="FontFile" uid="uid://cjeggffpppohb" path="res://assets/Agave/AgaveNerdFont-Regular.ttf" id="3_ub27k"]
[ext_resource type="Texture2D" uid="uid://cii4w1b6jjj3g" path="res://assets/Items/sap.png" id="4_c7d1j"]
[ext_resource type="Texture2D" uid="uid://47c3tla8c3bj" path="res://assets/Items/glowing-mushroom-01.png" id="5_gvsb2"]
[ext_resource type="Texture2D" uid="uid://rri60nd8bpap" path="res://assets/Items/token-01.png" id="6_kcaot"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tsjrr"]
atlas = ExtResource("5_gvsb2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxx47"]
atlas = ExtResource("5_gvsb2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6os1f"]
atlas = ExtResource("5_gvsb2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2gg6"]
atlas = ExtResource("5_gvsb2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_to8gx"]
atlas = ExtResource("5_gvsb2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n1bd"]
atlas = ExtResource("5_gvsb2")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pki3c"]
atlas = ExtResource("5_gvsb2")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7v7g7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsjrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxx47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6os1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2gg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to8gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n1bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pki3c")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_j0eea")

[node name="Menu" type="ColorRect" parent="."]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.243137, 0.478431, 1)

[node name="Container" type="ColorRect" parent="Menu"]
layout_mode = 0
offset_left = 35.0
offset_top = 25.0
offset_right = 1113.0
offset_bottom = 605.0
color = Color(0.419608, 0.670588, 0.854902, 1)

[node name="Sprite2D" type="Sprite2D" parent="Menu/Container"]
position = Vector2(486, 290)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_40rq5")

[node name="Label" type="Label" parent="Menu/Container"]
layout_mode = 0
offset_left = 107.0
offset_top = 78.0
offset_right = 382.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0.264802, 0.815254, 0.26922, 1)
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 61
text = "evergreen"

[node name="NewButton" type="Button" parent="Menu/Container"]
layout_mode = 0
offset_left = -14.0
offset_top = 539.0
offset_right = 146.0
offset_bottom = 599.0
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 25
text = "New Game"

[node name="LoadButton" type="Button" parent="Menu/Container"]
layout_mode = 0
offset_left = 160.0
offset_top = 539.0
offset_right = 320.0
offset_bottom = 599.0
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 25
text = "Load Game"

[node name="ControlsButton" type="Button" parent="Menu/Container"]
layout_mode = 0
offset_left = 332.0
offset_top = 539.0
offset_right = 492.0
offset_bottom = 599.0
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 25
text = "Controls"

[node name="QuitButton" type="Button" parent="Menu/Container"]
layout_mode = 0
offset_left = 504.0
offset_top = 539.0
offset_right = 664.0
offset_bottom = 599.0
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="Controls" type="ColorRect" parent="."]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.580392, 0.2, 1)

[node name="Menu" type="ColorRect" parent="Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.580392, 0.2, 1)

[node name="Container" type="ColorRect" parent="Controls/Menu"]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 1080.0
offset_bottom = 580.0
color = Color(0.337255, 0.741176, 0.356863, 1)

[node name="LabelL" type="Label" parent="Controls/Menu/Container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -209.0
offset_right = 445.0
offset_bottom = 223.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 25
text = "Cedar's lute sooths the beasts
 [enter].

The sound of Cedar's
magic bell propels him through
the air [space].

Walk [\"a\", \"d\"]

Pause [esc]"
horizontal_alignment = 1

[node name="LabelR" type="Label" parent="Controls/Menu/Container"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -102.0
offset_bottom = 117.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 25
text = "Yellow Sap heals Cedar's wounds.

Glowing mushrooms
 grant Cedar extra lives.

Minerals and precious stones 
increase Cedar's score."
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="Controls/Menu/Container"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="sap" type="Sprite2D" parent="Controls/Menu/Container"]
position = Vector2(513, 156)
scale = Vector2(2, 2)
texture = ExtResource("4_c7d1j")

[node name="shroom" type="AnimatedSprite2D" parent="Controls/Menu/Container"]
position = Vector2(520, 233)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7v7g7")

[node name="gem" type="Sprite2D" parent="Controls/Menu/Container"]
position = Vector2(519, 300)
scale = Vector2(2, 2)
texture = ExtResource("6_kcaot")

[node name="Intro" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="Menu" type="ColorRect" parent="Intro"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.580392, 0.2, 1)

[node name="Container" type="ColorRect" parent="Intro/Menu"]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 1080.0
offset_bottom = 580.0
color = Color(0.337255, 0.741176, 0.356863, 1)

[node name="AcceptButton" type="Button" parent="Intro/Menu/Container"]
layout_mode = 0
offset_left = 445.0
offset_top = 510.0
offset_right = 577.0
offset_bottom = 560.0
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 31
text = "Continue"

[node name="Label" type="Label" parent="Intro/Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 65.0
offset_right = 400.0
offset_bottom = 410.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_ub27k")
theme_override_font_sizes/font_size = 25
text = "Cedar has sensed that creatures of the Tree have grown restless.
Surely, this must indicate something has happened.

Sooth the creatures and seek the top of
the Tree for the cause of the disturbance."
horizontal_alignment = 1

[connection signal="pressed" from="Menu/Container/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="Menu/Container/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Menu/Container/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Menu/Container/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Controls/Menu/Container/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Intro/Menu/Container/AcceptButton" to="." method="_on_accept_button_pressed"]
